--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -19,11 +19,11 @@
   }
   
   .new-tweet textarea {
-    display: inline-block;
-    width: 90%;
-    min-height: 20px;
+    display: line;
+    width: 100%;
+    max-height: 35px;
     font-size: 16px;
-    padding: 10pxrem;
+    padding: 10px;
     border: none;
     border-bottom: 3px solid #3a3131;
     resize: vertical;
@@ -33,7 +33,7 @@
   .new-tweet button {
     font-size: 1rem;
     padding: 0.5rem 1rem;
-    background-color: #1da1f2;
+    background-color: #4056A1;
     color: #fff;
     border: none;
     border-radius: 4px;
